Missed a spacing issue on the login page...whoops

--- a/escape_scout/public/css/style.css
+++ b/escape_scout/public/css/style.css
@@ -26,7 +26,7 @@
 }
 
 .signup-box p {
-	margin-top:30px;
+	margin-top:50px;
 	font-size:34px;
 	text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
              0px 8px 13px rgba(0,0,0,0.1),
